# mod_qr

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.in  qr_config.h  qr_generator.c
src/: mod_qr.c  qr_generator.c  qr_generator.h
